[package]
name = "jaccount-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "3.0"
failure = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "*"

[dev-dependencies]
lazy_static = "1.4.0"
regex = "1"
httparse = "1.4.0"
webbrowser = "0.5.5"
hyper = "0.14"
tokio-test = "*"
